<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.kie.kogito</groupId>
    <artifactId>kogito-build-parent</artifactId>
    <version>2.0.0-SNAPSHOT</version>
  </parent>

  <artifactId>kogito-benchmarks</artifactId>
  <packaging>pom</packaging>

  <name>Kogito :: Benchmarks</name>
  <description>Benchmarks of sample Kogito apps</description>

  <properties>
    <maven.compiler.release>11</maven.compiler.release> <!-- Mainly because of the additions to the Process API introduced in Java 9 -->
  </properties>

  <modules>
    <module>kogito-benchmarks-framework</module>
    <module>kogito-benchmarks-tests</module>
  </modules>


</project>